# ComfyUI_FoleyCrafter

./: FoleyCrafter_node.py  README.md  __init__.py  pyproject.toml  requirements.txt
example/: example.json  example_new.json  workflow.json  workflow0906.json
foleycrafter/models/: auffusion_unet.py
foleycrafter/models/auffusion/: attention.py  resnet.py  transformer_2d.py  unet_2d_blocks.py
foleycrafter/models/auffusion/loaders/: ip_adapter.py  unet.py
foleycrafter/pipelines/: auffusion_pipeline.py  pipeline_controlnet.py
foleycrafter/utils/: util.py
